# yomi

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Justfile  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: anthropic.rs  bash_tool.rs  file_tool.rs  lib.rs  openai.rs  sqlite.rs
crates/app/: Cargo.toml
crates/app/src/: coordinator.rs  lib.rs  session.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  session.rs  storage.rs  utils.rs
crates/cli/src/commands/: config.rs  mod.rs  sessions.rs  skills.rs  tui.rs  usage.rs
crates/cli/src/misc/: claude_settings.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  config.rs  event.rs  lib.rs  prompt.rs  provider.rs  storage.rs  tool.rs  types.rs
crates/core/src/agent/: cancel.rs  config.rs  mod.rs  state.rs
crates/core/src/providers/: anthropic.rs
crates/core/src/storage/: fs.rs
crates/core/src/tools/: bash.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: config.rs  event.rs  lib.rs  prompt.rs  provider.rs  skill.rs  storage.rs  tool.rs  types.rs
crates/kernel/src/agent/: agent.rs  cancel.rs  config.rs  context.rs  handle.rs  message_buffer.rs  mod.rs  shared.rs  simple.rs  state.rs  stream_collector.rs  subagent.rs  types.rs
crates/kernel/src/agent/prompts/: sp.md
crates/kernel/src/app/: coordinator.rs  mod.rs  session.rs
crates/kernel/src/compactor/: mod.rs  summary_prompt.txt  types.rs
crates/kernel/src/memory/: mod.rs  project.rs
crates/kernel/src/misc/: mod.rs  plugin.rs
crates/kernel/src/permissions/: checker.rs  level.rs  mod.rs  resolver.rs
crates/kernel/src/project_memory/: mod.rs
crates/kernel/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/kernel/src/storage/: fs.rs  init.rs  jsonl_store.rs  meta.rs  migrations.rs  mod.rs  sqlite.rs  todo.rs  token.rs
crates/kernel/src/storage/file_state/: jsonl.rs  mod.rs
crates/kernel/src/storage/message/: jsonl.rs  mod.rs
crates/kernel/src/storage/session/: mod.rs  sqlite.rs
crates/kernel/src/storage/session_state/: entry.rs  manager.rs  mod.rs
crates/kernel/src/storage/todo/: json.rs  mod.rs
crates/kernel/src/storage/usage/: mod.rs  sqlite.rs
crates/kernel/src/task/: mod.rs  sqlite_storage.rs  storage.rs  store.rs  tests.rs  types.rs
crates/kernel/src/task/tools/: create.rs  get.rs  list.rs  mod.rs  update.rs
crates/kernel/src/tools/: base.rs  bash.rs  edit.rs  edit_utils.rs  executor.rs  factory.rs  file.rs  file_lock.rs  file_state.rs  glob.rs  grep.rs  html_extractor.rs  line_numbers.rs  mod.rs  parallel.rs  read.rs  registry_factory.rs  reminder.rs  shell.rs  skill_load.rs  subagent.rs  task.rs  todo.rs  webfetch.rs  websearch.rs  write.rs
crates/kernel/src/tools/helper/: file_lock.rs  file_state.rs  file_utils.rs  mod.rs  truncate.rs
crates/kernel/src/utils/: diff.rs  env.rs  html.rs  id.rs  image.rs  mod.rs  path.rs  rg_helper.rs  strs.rs  tokens.rs
crates/shared/: Cargo.toml
crates/shared/src/: types.rs
crates/tui/: AGENTS.md  Cargo.toml
crates/tui/src/: app.rs  attr.rs  fold.rs  id.rs  input.rs  lib.rs  markdown.rs  markdown_stream.rs  model.rs  msg.rs  render.rs  table.rs  theme.rs
crates/tui/src/components/: banner.rs  chat_history.rs  chat_view.rs  command_palette.rs  completion_list.rs  dialog.rs  file_completion.rs  fuzzy_picker.rs  help_dialog.rs  info_bar.rs  input.rs  input_edit.rs  mod.rs  status_bar.rs  streaming_msg.rs  tips.rs  todo_list.rs  wrap_paragraph.rs
crates/tui/src/components/assets/: mascot_eye_closed.txt  mascot_eye_opened.txt  mascot_normal.txt
crates/tui/src/utils/: clipboard.rs  mod.rs  text.rs  token_utils.rs
docs/: config.md
docs/superpowers/plans/: 2025-03-30-agent-design-improvements.md  2025-03-30-tui-redesign.md  2025-04-13-plugin-support.md  2026-03-29-nekoclaw-implementation.md
docs/superpowers/specs/: 2025-03-30-tui-redesign.md  2026-03-29-nekoclaw-design.md
examples/skills/: README.md  rust-error-handling.md
scripts/: brew-release-local.sh  brew-release.sh  homebrew-publish
