[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/nekoclaw"

[workspace.dependencies]
# Core deps
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# TUI deps
ratatui = "0.29"
crossterm = "0.28"
pulldown-cmark = "0.12"

# CLI deps
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
tracing-subscriber = "0.3"

# Adapter deps (only used in adapters crate)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
eventsource-stream = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
futures = "0.3"

# Internal
nekoclaw-shared = { path = "crates/shared" }
nekoclaw-core = { path = "crates/core" }
nekoclaw-adapters = { path = "crates/adapters" }
nekoclaw-app = { path = "crates/app" }
nekoclaw-tui = { path = "crates/tui" }
