[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/yomi"

[workspace.dependencies]
# Core deps
tokio = { version = "1.51", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde", "v7"] }

# TUI deps
ratatui = "0.29"
crossterm = "0.29"
pulldown-cmark = "0.13"

# CLI deps
clap = { version = "4.6", features = ["derive"] }
config = "0.15"
tracing-subscriber = "0.3"

reqwest = { version = "0.13", features = ["stream", "json"] }
eventsource-stream = "0.2"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "chrono",
] }
futures = "0.3"

# Internal - renamed for generic use in code
kernel = { path = "crates/kernel", package = "kernel" }
app = { path = "crates/app", package = "app" }
tui = { path = "crates/tui", package = "tui" }
