[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["Huaru Li <crescent617@outlook.com>"]
license = "MIT"
repository = "https://github.com/Crescent617/yomi"

[workspace.lints.clippy]
needless_raw_string_hashes = "allow"
option_if_let_else = "allow"

[workspace.dependencies]
# Core deps
tokio = { version = "1.51", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde", "v7"] }

# TUI deps
crossterm = { version = "0.29", features = ["bracketed-paste"] }
pulldown-cmark = "0.13"

# CLI deps
clap = { version = "4.6", features = ["derive"] }
config = "0.15"
tracing-subscriber = "0.3"

reqwest = { version = "0.13", features = ["stream", "json"] }
eventsource-stream = "0.2"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "chrono",
] }
futures = "0.3"
toml = "1.1"

# Internal - renamed for generic use in code
kernel = { path = "crates/kernel", package = "kernel" }
tui = { path = "crates/tui", package = "tui" }
directories = "6.0"
md5 = "0.8"
rand = "0.10"
serde_yaml = "0.9"
smol_str = "0.3"
tempfile = "3.0"
tokio-test = "0.4"
tracing-appender = "0.2"
tracing-rolling-file = "0.1.3"
tui-realm-stdlib = "3.1"
tuirealm = "3.3"
unicode-width = "0.2"
