[package]
name = "nekoclaw-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nekoclaw-shared = { workspace = true }
nekoclaw-core = { workspace = true }
nekoclaw-adapters = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
