[package]
name = "nekoclaw-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nekoclaw"
path = "src/main.rs"

[dependencies]
nekoclaw-core = { workspace = true }
nekoclaw-app = { workspace = true }
nekoclaw-tui = { workspace = true }

clap = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-rolling-file = "0.1.3"
directories = "5.0"
