[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "yomi"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
tui = { workspace = true }

clap = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }
tracing-rolling-file = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
md5 = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
