[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["providers", "storage", "tools"]
providers = ["dep:reqwest", "dep:eventsource-stream"]
storage = ["dep:sqlx"]
tools = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

tokio-util = { workspace = true }
futures = { workspace = true, features = ["std"] }
smol_str = { workspace = true, features = ["serde"] }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Optional dependencies for features
reqwest = { workspace = true, optional = true }
eventsource-stream = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
arc-swap = { workspace = true }

# Tool dependencies
regex = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
base64 = { workspace = true }
lru = { workspace = true }
html2text = { workspace = true }
urlencoding = { workspace = true }
scraper = { workspace = true }

# Task system dependencies
# Note: fs4 removed - using SQLite instead of file-based storage

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
