[package]
name = "tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kernel = { workspace = true }

crossterm = { workspace = true }
unicode-width = { workspace = true }
pulldown-cmark = { workspace = true }
# tiktoken-rust = "0.2"  # Requires OpenSSL, disabled for now

# TUI Realm - declarative component framework
tuirealm = { workspace = true }
tui-realm-stdlib = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

# Image clipboard support
arboard = { version = "3.3", default-features = false, features = ["image-data"] }
tempfile = "3.10"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[lints]
workspace = true
