[package]
name = "tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kernel = { workspace = true }

crossterm = { workspace = true }
unicode-width = { workspace = true }
pulldown-cmark = { workspace = true }
# tiktoken-rust = "0.2"  # Requires OpenSSL, disabled for now

# TUI Realm - declarative component framework
tuirealm = { workspace = true }
tui-realm-stdlib = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

# Image clipboard support
# Enable wayland-data-control for native Wayland support (no XWayland needed)
arboard = { workspace = true, features = ["image-data", "wayland-data-control"] }
tempfile = { workspace = true }
image = { workspace = true, features = ["png"] }
base64 = { workspace = true }

# Unix signal handling for Ctrl-Z (suspend)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[lints]
workspace = true
